// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeGrid basic isLoading snapshot render 1`] = `
<ul
  className="sc-fzozJi dRjLCd spinner spinning"
>
  <li
    className="sc-AxiKw jXQYCi"
  >
    <a
      href="/recipe/123"
      onClick={[Function]}
    >
      <figure>
        <img
          alt="fake_title1 image"
          src="fake_alt_text1"
        />
        <div>
          <span
            className="sc-AxjAm bvDzNL"
          >
            Slimming world
          </span>
          <span
            className="sc-AxjAm gMVqdg"
          >
            Chicken
          </span>
          <span
            className="sc-AxjAm czXwAh"
          >
            Beef
          </span>
          <span
            className="sc-AxjAm dopHzL"
          >
            Vegetables
          </span>
          <span
            className="sc-AxjAm biKGRT"
          >
            Under 20 mins
          </span>
        </div>
        <figcaption>
          <h3>
            fake_title1
          </h3>
        </figcaption>
      </figure>
      <section
        className="sc-AxirZ jBBJVq"
      >
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
      </section>
      <p>
        fake_description1
      </p>
    </a>
  </li>
  <li
    className="sc-AxiKw jXQYCi"
  >
    <a
      href="/recipe/124"
      onClick={[Function]}
    >
      <figure>
        <img
          alt="fake_title2 image"
          src="fake_alt_text2"
        />
        <div>
          <span
            className="sc-AxjAm bvDzNL"
          >
            Slimming world
          </span>
          <span
            className="sc-AxjAm gMVqdg"
          >
            Chicken
          </span>
          <span
            className="sc-AxjAm czXwAh"
          >
            Beef
          </span>
          <span
            className="sc-AxjAm dopHzL"
          >
            Vegetables
          </span>
          <span
            className="sc-AxjAm biKGRT"
          >
            Under 20 mins
          </span>
        </div>
        <figcaption>
          <h3>
            fake_title2
          </h3>
        </figcaption>
      </figure>
      <section
        className="sc-AxirZ jBBJVq"
      >
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
      </section>
      <p>
        fake_description2
      </p>
    </a>
  </li>
</ul>
`;

exports[`RecipeGrid basic snapshot render 1`] = `
<ul
  className="sc-fzozJi dRjLCd spinner"
>
  <li
    className="sc-AxiKw jXQYCi"
  >
    <a
      href="/recipe/123"
      onClick={[Function]}
    >
      <figure>
        <img
          alt="fake_title1 image"
          src="fake_alt_text1"
        />
        <div>
          <span
            className="sc-AxjAm bvDzNL"
          >
            Slimming world
          </span>
          <span
            className="sc-AxjAm gMVqdg"
          >
            Chicken
          </span>
          <span
            className="sc-AxjAm czXwAh"
          >
            Beef
          </span>
          <span
            className="sc-AxjAm dopHzL"
          >
            Vegetables
          </span>
          <span
            className="sc-AxjAm biKGRT"
          >
            Under 20 mins
          </span>
        </div>
        <figcaption>
          <h3>
            fake_title1
          </h3>
        </figcaption>
      </figure>
      <section
        className="sc-AxirZ jBBJVq"
      >
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
      </section>
      <p>
        fake_description1
      </p>
    </a>
  </li>
  <li
    className="sc-AxiKw jXQYCi"
  >
    <a
      href="/recipe/124"
      onClick={[Function]}
    >
      <figure>
        <img
          alt="fake_title2 image"
          src="fake_alt_text2"
        />
        <div>
          <span
            className="sc-AxjAm bvDzNL"
          >
            Slimming world
          </span>
          <span
            className="sc-AxjAm gMVqdg"
          >
            Chicken
          </span>
          <span
            className="sc-AxjAm czXwAh"
          >
            Beef
          </span>
          <span
            className="sc-AxjAm dopHzL"
          >
            Vegetables
          </span>
          <span
            className="sc-AxjAm biKGRT"
          >
            Under 20 mins
          </span>
        </div>
        <figcaption>
          <h3>
            fake_title2
          </h3>
        </figcaption>
      </figure>
      <section
        className="sc-AxirZ jBBJVq"
      >
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
        <mark>
          ★
        </mark>
      </section>
      <p>
        fake_description2
      </p>
    </a>
  </li>
</ul>
`;
